adds initial api connector boilerplate + fancy es7 decorators

--- a/package.json
+++ b/package.json
@@ -30,5 +30,8 @@
     "browserify": "^10.2.3",
     "chai": "^2.3.0",
     "mocha": "^2.2.5"
+  },
+  "dependencies": {
+    "oauth": "^0.9.13"
   }
 }
