--- a/package.json
+++ b/package.json
@@ -1,12 +1,15 @@
 {
   "name": "node-xero",
-  "version": "0.1.0",
-  "description": "Node.js wrapper for Xero",
+  "version": "1.0.0",
+  "description": "node wrapper for Xero",
   "main": "index.js",
   "scripts": {
-    "test": "mocha --compilers js:babel/register",
-    "browserify": "browserify index.js -t babelify --outfile build/xero/index.js",
-    "babelify": "babel --stage 0 --plugins object-assign -d lib/ src/"
+    "test": "babel-node test/index.js | tap-notify | faucet",
+    "build": "babel -d lib/ src/",
+    "lint": "eslint --cache src/",
+    "prepublish": "npm run lint && npm run build && npm run test",
+    "prepush": "prepush",
+    "precommit": "precommit"
   },
   "repository": {
     "type": "git",
@@ -16,22 +19,28 @@
     "xero",
     "accounting"
   ],
-  "author": "Michael Scott Hertzberg <mshertzberg@gmail.com> (http://michael.hertzberg.co/)",
+  "author": "Michael Scott Hertzberg <mshertzberg@gmail.com> (http://hertzber.gs/)",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/moimikey/node-xero/issues"
   },
   "homepage": "https://github.com/moimikey/node-xero",
   "devDependencies": {
-    "babel": "6.1.5",
-    "babel-core": "6.3.15",
-    "babel-plugin-object-assign": "1.2.1",
-    "babelify": "7.2.0",
-    "browserify": "12.0.1",
-    "chai": "3.4.1",
-    "mocha": "2.3.4"
+    "babel-cli": "6.3.17",
+    "babel-core": "6.3.17",
+    "babel-eslint": "5.0.0-beta6",
+    "babel-polyfill": "6.3.14",
+    "babel-preset-es2015": "6.3.13",
+    "babel-preset-stage-0": "6.3.13",
+    "babel-runtime": "6.3.13",
+    "eslint": "1.10.3",
+    "faucet": "0.0.1",
+    "tap-notify": "0.0.3",
+    "tap-spec": "4.1.1",
+    "tape": "4.2.2"
   },
   "dependencies": {
-    "oauth": "0.9.14"
+    "hasdom": "0.0.4",
+    "mashape-oauth": "0.1.71"
   }
 }
