--- a/package.json
+++ b/package.json
@@ -26,21 +26,20 @@
   },
   "homepage": "https://github.com/moimikey/node-xero",
   "devDependencies": {
-    "babel-cli": "6.3.17",
-    "babel-core": "6.3.17",
+    "babel-core": "6.3.26",
     "babel-eslint": "5.0.0-beta6",
-    "babel-polyfill": "6.3.14",
     "babel-preset-es2015": "6.3.13",
     "babel-preset-stage-0": "6.3.13",
-    "babel-runtime": "6.3.13",
+    "babel-runtime": "6.3.19",
     "eslint": "1.10.3",
     "faucet": "0.0.1",
     "tap-notify": "0.0.3",
     "tap-spec": "4.1.1",
-    "tape": "4.2.2"
+    "tape": "4.3.0"
   },
   "dependencies": {
     "hasdom": "0.0.4",
-    "mashape-oauth": "0.1.71"
+    "mashape-oauth": "0.1.71",
+    "native-or-bluebird": "1.2.0"
   }
 }
