--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   },
   "homepage": "https://github.com/moimikey/node-xero",
   "devDependencies": {
+    "babel-cli": "6.3.17",
     "babel-core": "6.3.26",
     "babel-eslint": "5.0.0-beta6",
     "babel-preset-es2015": "6.3.13",
