--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
     "build": "babel -d lib/ src/",
     "lint": "eslint --cache src/",
     "prepublish": "npm run lint && npm run build && npm run test",
-    "prepush": "prepush",
-    "precommit": "precommit"
+    "aids": "babel-node test/t.js"
   },
   "repository": {
     "type": "git",
@@ -27,14 +26,14 @@
   },
   "homepage": "https://github.com/moimikey/node-xero",
   "devDependencies": {
-    "babel-cli": "6.6.0",
-    "babel-core": "6.6.0",
-    "babel-eslint": "5.0.0-beta6",
-    "babel-plugin-transform-object-assign": "6.3.13",
+    "babel-cli": "6.6.4",
+    "babel-core": "6.6.4",
+    "babel-eslint": "5.0.0",
+    "babel-plugin-transform-object-assign": "6.5.0",
     "babel-preset-es2015": "6.6.0",
     "babel-preset-stage-0": "6.5.0",
-    "babel-runtime": "6.3.19",
-    "eslint": "2.0.0",
+    "babel-runtime": "6.6.1",
+    "eslint": "2.2.0",
     "faucet": "0.0.1",
     "native-or-bluebird": "1.2.0",
     "tap-notify": "1.0.0",
@@ -42,7 +41,9 @@
     "tape": "4.4.0"
   },
   "dependencies": {
+    "bluebird": "3.3.3",
     "hasdom": "0.0.4",
-    "mashape-oauth": "0.1.71"
+    "mashape-oauth": "0.1.71",
+    "native-or-bluebird": "1.2.0"
   }
 }
