--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,22 @@
-.eslintcache
-.DS*
+*.cache
+*.iws
 *.log
-src/.old
-node_modules
-ssl
-lib
+*.log*
+*.map
+*.pid
+*.seed
+*.sublime-workspace
+._*
+.Apple*
+.DS_Store
+.eslintcache
+.idea/
+.sass-cache/
+.Trashes
+.VolumeIcon.icns
+benchmark/
+build/
+coverage/
+lib/
+logs/
+node_modules/
