--- a/package.json
+++ b/package.json
@@ -35,23 +35,26 @@
   },
   "peerDependencies": {},
   "devDependencies": {
-    "babel-cli": "6.11.4",
-    "babel-core": "6.10.4",
+    "babel-cli": "6.14.0",
+    "babel-core": "6.14.0",
     "babel-eslint": "6.1.2",
     "babel-plugin-transform-runtime": "6.12.0",
-    "babel-preset-es2015": "6.13.2",
+    "babel-preset-es2015": "6.14.0",
     "babel-preset-stage-0": "6.5.0",
     "babel-tap": "5.0.0",
-    "eslint": "3.3.0",
+    "eslint": "3.4.0",
     "eslint-plugin-babel": "3.3.0",
     "nodemon": "1.10.2",
     "npm-run-all": "3.0.0",
     "rimraf": "2.5.4",
-    "tap": "6.3.2"
+    "tap": "7.0.0",
+    "typeov": "1.2.3"
   },
   "dependencies": {
     "any-promise": "1.3.0",
+    "assert": "1.4.1",
     "babel-runtime": "6.11.6",
+    "bluebird": "3.4.5",
     "hasdom": "0.0.4",
     "isomorphic-fetch": "2.2.1",
     "lodash": "4.15.0",
